# university-assignments

./: .gitignore  README.md
Anul_1/Semestru_1/ComputationalLogic/GeorgescuStefan/: Documentation.docx  Read Me.docx  Source Code.docx
Anul_1/Semestru_1/FundamentalsOfProg/Seminar/: Seminar01.py
Anul_1/Semestru_2/dataStructs/Red_Back/: CMakeLists.txt  main.cpp
Anul_1/Semestru_2/dataStructs/Red_Back/DataStructures/Queue/: Queue.cpp  Queue.h
Anul_1/Semestru_2/dataStructs/Red_Back/DataStructures/Stack/: Stack.cpp  Stack.h
Anul_1/Semestru_2/dataStructs/Red_Back/Exceptions/: RedBackException.h
Anul_1/Semestru_2/dataStructs/Red_Back/Game/: Game.cpp  Game.h
Anul_1/Semestru_2/dataStructs/Red_Back/Game/Player/: Player.cpp  Player.h
Anul_1/Semestru_2/dataStructs/Red_Back/Game/Table/: Table.cpp  Table.h
Anul_1/Semestru_2/dataStructs/Red_Back/Misc/: Coverage_Run
Anul_1/Semestru_2/dataStructs/Red_Back/Tests/: TestQueue.cpp  TestStack.cpp
Anul_1/Semestru_2/dataStructs/Red_Back/UserInterface/: UserInterface.cpp  UserInterface.h
Anul_1/Semestru_2/oop/exam_practice_1/: Info.plist  exam_practice_1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.cpp  popup.h  project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
Anul_1/Semestru_2/oop/lab10_11/: CMakeLists.txt  Console.cpp  Console.hpp  Controller.cpp  Controller.hpp  Exceptions.cpp  GUI.cpp  GUI.hpp  Repository.cpp  Repository.hpp  Socks.cpp  Socks.hpp  Tests.cpp  Tests.hpp  basket_CSV.csv  basket_html.html  main.cpp  socks.txt  socks_test.txt
Anul_2/Semestru_1/SoftEng/theGame/: theGame.sln
Anul_2/Semestru_1/cStat/: R01.R  R02.R  R03.R  R04.R  lab1.R  lab2.R  lab3.R  lab4.R  lab5.R  labChap6.R  labChap7.R  test.R  testsChapter.R
Anul_2/Semestru_1/progr3/project/: project.eml
Anul_2/Semestru_1/progr3/project_warsaw_programming/: UserPreferences.txt  project.eml
Anul_2/Semestru_1/progr3/project_warsaw_programming_modif/: UserPreferences.txt
Anul_2/Semestru_1/webApp/Test3Prep/: Test3Prep.sln
Anul_2/Semestru_1/webApp/lab1/: first.html
Anul_2/Semestru_1/webApp/lab2/: frames.html  smallFrame.html  style2.html  styles.html
Anul_2/Semestru_1/webApp/lab3/: form.html  nextJS.html  scanning.html  startJS.html  stringDateNumber.html
Anul_2/Semestru_1/webApp/lab4/: 1.html
Anul_2/Semestru_1/webApp/serverModel/: lab2.sln
Anul_2/Semestru_1/webApp/test1/: index.html  style.css
Anul_2/Semestru_1/webApp/test1Prep/: index.html  style.css  task.txt
Anul_2/Semestru_1/webApp/test3PrepXan/: test3PrepXan.sln
Anul_2/Semestru_2/AI/Lab4/: example.py
Anul_2/Semestru_2/AI/Lab5/: genetic_programming.py
Anul_2/Semestru_2/DBMS/LabWork/: LabWork.sln
Anul_2/Semestru_2/DBMS/WebApplication1/: WebApplication1.sln
Anul_2/Semestru_2/IV/: Main.vi  dispenser.vi  stateMachine.lvproj  stateMachineLab$.lvlps  stateMachineLab$.lvproj
Anul_2/Semestru_2/IV/controls/: Data.ctl  State.ctl
Anul_2/Semestru_2/IV/finalProj /: finalProj  finalProj.lvlps  finalProj.lvproj  waveformGenerator.vi
Anul_2/Semestru_2/IV/lab2/: formulaNode.vi  master.vi  randomFind.vi  vi2.lvlps  vi2.lvproj  vi2.vi  (+1 more)
Anul_3/Semestrul_1/PPD/Labs/ppd-lab9/normal/: CMakeLists.txt  main.cpp
Anul_3/Semestrul_1/PPD/Labs/ppd-proj-nompi/: CMakeLists.txt  main.cpp
Anul_3/Semestrul_1/SecuritateSoftware/: SecuritateSoftware2.sln
(+1055 files in other folders)
